<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_time_sort"
        android:layout_width="0dp"
        android:layout_height="45px"
        android:layout_marginLeft="25px"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_time_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/popup_title_time"
            android:textColor="@color/white"
            android:textSize="14px" />

        <ImageView
            android:id="@+id/iv_time_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:scaleType="center"
            android:src="@drawable/tk_arrange_none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_type_sort"
        android:layout_width="0dp"
        android:layout_height="45px"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_type_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/popup_title_type"
            android:textColor="@color/white"
            android:textSize="14px" />

        <ImageView
            android:id="@+id/iv_type_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:scaleType="center"
            android:src="@drawable/tk_arrange_none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_name_sort"
        android:layout_width="0dp"
        android:layout_height="45px"
        android:layout_marginRight="50px"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_name_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/popup_title_name"
            android:textColor="@color/white"
            android:textSize="14px" />

        <ImageView
            android:id="@+id/iv_name_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:scaleType="center"
            android:src="@drawable/tk_arrange_none" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_temp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20px"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_take_photo"
            android:layout_width="0dp"
            android:layout_height="30px"
            android:layout_weight="1"
            android:background="@drawable/tk_button_send_default"
            android:gravity="center"
            android:text="@string/uploadphoto"
            android:textColor="@color/popup_window_choose_photo_color"
            android:textSize="14px" />

        <TextView
            android:id="@+id/popup_choose_photo"
            android:layout_width="0dp"
            android:layout_height="30px"
            android:layout_marginLeft="14px"
            android:layout_weight="1"
            android:background="@drawable/tk_button_send_default"
            android:gravity="center"
            android:text="@string/select_picture_from_album"
            android:textColor="@color/popup_window_choose_photo_color"
            android:textSize="14px" />
    </LinearLayout>

</LinearLayout>
